add table of contents and headers to guided projects

--- a/data_science_path/Guided_Project01_Using_Jupyter_notebook/Guided_Project01_Using_Jupyter_notebook.ipynb
+++ b/data_science_path/Guided_Project01_Using_Jupyter_notebook/Guided_Project01_Using_Jupyter_notebook.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Guided Project 01: Using Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "\n",
+    "* [Core Content](#core-content)\n",
+    "* [Take Aways](#take-aways)\n",
+    "* [What We Did So far?](#what-we-did-so-far?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Core Content <a class=\"anchor\" id=\"core-content\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -4824,7 +4849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Take Aways\n",
+    "## Take Aways <a class=\"anchor\" id=\"take-aways\"></a>\n",
     "- Always know your data - format, delimiters, type\n",
     "- Develop bit by bit - don't just jump and code the whole thing, morely to make mistakes!\n",
     "- Use list splicing to reduce loop to desired amount for testing vs. count variable + break logic!\n",
@@ -4835,7 +4860,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What we did so far?\n",
+    "## What we did so far? <a class=\"anchor\" id=\"what-we-did-so-far?\"></a>\n",
+    "\n",
     "The raw data we are working with for this project is the birth dates in the United States data. We did the following:\n",
     "1. Read in the data and explored various ways of displaying the data\n",
     "    - Having Jupyter display it by having our last line refer to the variable directly\n",
