--- a/data_science_path/Guided_Project02_Explore_U.S._Births/Guided_Project02_Explore_U.S._Births.ipynb
+++ b/data_science_path/Guided_Project02_Explore_U.S._Births/Guided_Project02_Explore_U.S._Births.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Guided Project 02: Explore U.S. Births"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "\n",
+    "* [Core Content](#core-content)\n",
+    "* [Next Step](#next-steps)\n",
+    "* [What We Did So far?](#what-we-did-so-far?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Core Content <a class=\"anchor\" id=\"core-content\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -379,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Next Steps\n",
+    "## Next Steps <a class=\"anchor\" id=\"next-steps\"></a>\n",
     "That's it for the guided steps. Here are some suggestions for next steps:\n",
     "\n",
     "Write a function that can calculate the min and max values for any dictionary that's passed in.\n",
@@ -392,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What did we do so far?\n",
+    "## What did we do so far? <a class=\"anchor\" id=\"what-we-did-so-far?\"></a>\n",
     "The raw data we are working with for this project is the birth dates in the United States data. We did the following:\n",
     "1. Wrote a function to read in the csv data \n",
     "    - Removed the header and split on new line character, '\\n'\n",
