--- a/data_science_path/Guided_Project03_Exploring_Gun_Deaths_in_the_US/Guided_Project03_Exploring_Gun_Deaths_in_the_US.ipynb
+++ b/data_science_path/Guided_Project03_Exploring_Gun_Deaths_in_the_US/Guided_Project03_Exploring_Gun_Deaths_in_the_US.ipynb
@@ -6,7 +6,27 @@
     "collapsed": true
    },
    "source": [
-    "# Guided Project - Exploring Gun Deaths in the US"
+    "# Guided Project 03: Exploring Gun Deaths in the US"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "\n",
+    "* [Core Content](#core-content)\n",
+    "* [Lessons Learnt So Far](#lessons-learnt-so-far)\n",
+    "* [Findings](#findings)\n",
+    "* [Next Steps](#next-steps)\n",
+    "* [Project Summary](#project-summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Core Content <a class=\"anchor\" id=\"core-content\"></a>"
    ]
   },
   {
@@ -414,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lessons Learnt So Far\n",
+    "## Lessons Learnt So Far <a class=\"anchor\" id=\"lessons-learnt-so-far\"></a>\n",
     "- Remember to seperate header from data if header is present\n",
     "- Good idea to do some quick calculations by group to see for any quick insights\n",
     "- There is a spike in gun deaths during the summer (May - Aug/Sep) every year\n",
@@ -740,7 +760,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Findings\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Findings <a class=\"anchor\" id=\"findings\"></a>\n",
     "- When taking census data into consideration, blacks experience the highest gun death rate per 100K (~58). The next highest are whites with ~34.\n",
     "- There are a larger number of black homicides (19,510), followed by white homicides (9,147)\n",
     "- Although Asian/Pacific Islanders experience the lowest gun death rate per 100K (8), they experienced more homicide gun deaths than Native American/Native Alaskan (559 vs. 326)"
@@ -750,7 +777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Next Steps\n",
+    "## Next Steps <a class=\"anchor\" id=\"next-steps\"></a>\n",
     "- Look at education levels and locations\n",
     "- Create some plots to better visualize the statistics\n",
     "- Look at age, police\n",
@@ -763,7 +790,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Project Summary\n",
+    "## Project Summary <a class=\"anchor\" id=\"project-summary\"></a>\n",
     "That's it for the guided steps! We recommend exploring the data more on your own.\n",
     "\n",
     "Here are some potential next steps:\n",
@@ -775,6 +802,13 @@
     "\n",
     "We recommend creating a Github repository and placing this project there. It will help other people, including employers, see your work. As you start to put multiple projects on Github, you'll have the beginnings of a strong portfolio. You're welcome to keep working on the project here, but we recommend downloading it to your computer using the download icon above and working on it there."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -793,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
