move pictures from assets/ to appropriate directories - update project12 to point to updated picture location

--- a/data_science_path/project12_answering_business_questions_using_sql/project12_answering_business_questions_using_sql.ipynb
+++ b/data_science_path/project12_answering_business_questions_using_sql/project12_answering_business_questions_using_sql.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "We will continue to use the Chinook database that we have previously used. The Chinook database is provided as a SQLite database file called `chinook.db`. A copy of the database schema is below:\n",
     "\n",
-    "![chinook db schema](../assets/chinook-schema.svg)"
+    "![chinook db schema](chinook-schema.svg)"
    ]
   },
   {
