update project12 notebook

--- a/data_science_path/project12_answering_business_questions_using_sql/project12_answering_business_questions_using_sql.ipynb
+++ b/data_science_path/project12_answering_business_questions_using_sql/project12_answering_business_questions_using_sql.ipynb
@@ -1674,9 +1674,7 @@
     "- Which artist is used in the most playlists?\n",
     "- How many tracks have been purchased vs not purchased?\n",
     "- Is the range of tracks in the store reflective of their sales popularity?\n",
-    "- Do protected vs non-protected media types have an effect on popularity?\n",
-    "\n",
-    "In the next mission, we'll learn more about table relations and normalization, including how to create and modify database tables."
+    "- Do protected vs non-protected media types have an effect on popularity?"
    ]
   }
  ],
