minor grammatical fix in project15 notebook

--- a/data_science_path/projects/project15_finding_the_best_markets_to_advertise_in/project15_finding_the_best_markets_to_advertise_in.ipynb
+++ b/data_science_path/projects/project15_finding_the_best_markets_to_advertise_in/project15_finding_the_best_markets_to_advertise_in.ipynb
@@ -8023,7 +8023,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion\n",
+    "## Conclusion\n",
     "\n",
     "In this project, we analyzed survey data from new coders to find the best two markets to advertise in. The only solid conclusion we reached is that the US would be a good market to advertise in.\n",
     "\n",
@@ -8079,7 +8079,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
