complete data engineer project 01 - storing storm data

--- a/data_engineer_path/projects/project01_storing_storm_data/project01_storing_storm_data.ipynb
+++ b/data_engineer_path/projects/project01_storing_storm_data/project01_storing_storm_data.ipynb
@@ -42,6 +42,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Import Libraries & Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import libraries\n",
+    "import csv\n",
+    "import datetime\n",
+    "import psycopg2\n",
+    "\n",
+    "import pandas as pd\n",
+    "import pprint as pp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "_Helper Functions_"
    ]
   },
@@ -97,18 +119,6 @@
    ],
    "source": [
     "!ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import libraries\n",
-    "import csv\n",
-    "import psycopg2\n",
-    "import pandas as pd"
    ]
   },
   {
@@ -859,32 +869,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Create the Database and Users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(dbname=\"johannes\", user=\"johannes\")\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Autocommit instead of committing every transaction - needed to create DB\n",
+    "conn.autocommit = True\n",
+    "\n",
+    "cursor.execute('CREATE DATABASE ihw')\n",
+    "cursor.execute(\"CREATE USER production WITH PASSWORD 'abc123'\")\n",
+    "cursor.execute(\"CREATE USER analyst WITH PASSWORD 'def456'\")\n",
+    "\n",
+    "conn.commit()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Create the Table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
-    "conn = psycopg2.connect(dbname=\"johannes\", user=\"johannes\")\n",
+    "conn = psycopg2.connect(dbname=\"ihw\", user=\"johannes\")\n",
     "cursor = conn.cursor()\n",
     "\n",
     "cursor.execute(\"\"\"\n",
-    "CREATE TABLE storm_data(\n",
-    "    fid integer PRIMARY KEY,\n",
-    "    record_date TIMESTAMP,\n",
-    "    btid SMALLINT,\n",
-    "    name TEXT,\n",
-    "    lat SMALLINT,\n",
-    "    long SMALLINT,\n",
+    "CREATE TABLE hurricanes(\n",
+    "    fid INTEGER PRIMARY KEY,\n",
+    "    recorded_at TIMESTAMP,\n",
+    "    btid INTEGER,\n",
+    "    name VARCHAR(10),\n",
+    "    lat DECIMAL(4, 1),\n",
+    "    long DECIMAL(4, 1),\n",
     "    wind_kts SMALLINT,\n",
-    "    pressure SMALLINT,\n",
+    "    pressure INTEGER,\n",
     "    category VARCHAR(2),\n",
-    "    basin TEXT,\n",
-    "    shape_leng DECIMAL(7, 6)\n",
+    "    basin VARCHAR(16),\n",
+    "    shape_leng DECIMAL(8, 6)\n",
     ")\n",
     "\"\"\")\n",
     "\n",
@@ -896,7 +932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the User\n",
+    "## Manage User Privileges\n",
     "\n",
     "With a table set up, it's now time to create a user on the Postgres database that can insert, update, and read the data but not delete. This is to make sure that someone who might get a hold of this user does not issue a destructive command. Essentially, this is like creating a \"data production\" user whose job it is is to always write new and existing data to the table.\n",
     "\n",
@@ -905,10 +941,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "conn = psycopg2.connect(dbname=\"ihw\", user=\"johannes\")\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "REVOKE ALL ON hurricanes FROM production;\n",
+    "REVOKE ALL ON hurricanes FROM analyst;\n",
+    "GRANT SELECT, INSERT, UPDATE ON hurricanes TO production;\n",
+    "GRANT SELECT ON hurricanes TO analyst;\n",
+    "\"\"\")\n",
+    "\n",
+    "conn.commit()\n",
+    "conn.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -919,10 +968,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# unable to login to database as user 'production' --> will try via regular py script\n",
+    "conn = psycopg2.connect(dbname='ihw', user='johannes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(dbname='ihw', user='johannes')\n",
+    "cursor = conn.cursor()\n",
+    "conn.autocommit = True\n",
+    "\n",
+    "with open('storm_data.csv', 'r') as f:\n",
+    "    \n",
+    "    next(f) # skip header line\n",
+    "    reader = csv.reader(f)\n",
+    "\n",
+    "    rows = []\n",
+    "    for row in reader:\n",
+    "        #print(row)\n",
+    "        recorded_at = datetime.datetime(int(row[1]), int(row[2]), int(row[3]), \n",
+    "                                        hour=int(row[4][:2]), minute=int(row[4][2:-1]))\n",
+    "        \n",
+    "        new_row = [row[0], recorded_at] + row[5:]\n",
+    "        #print(new_row)\n",
+    "        rows.append(\n",
+    "            cursor.mogrify(\n",
+    "                \"(%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\",\n",
+    "                new_row\n",
+    "            ).decode('utf-8')\n",
+    "        )\n",
+    "    \n",
+    "    #pp.pprint(rows[:10])\n",
+    "        \n",
+    "    cursor.execute(\"INSERT INTO hurricanes VALUES \" + \",\".join(rows))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(59228,)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# validate data\n",
+    "cursor.execute('select count(1) from hurricanes')\n",
+    "pp.pprint(cursor.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(59228, 14)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-> This matches the number of rows in our original dataset!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -932,11 +1065,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Here's just a small list of features we can add to our Postgres Database:\n",
+    "\n",
+    "- A `readonly` group instead of just one `readonly` user.\n",
+    "- Try downloading the following [file](https://dq-content.s3.amazonaws.com/251/storm_data_additional.csv) that contains a new dataset that is slightly different.\n",
+    "    - See if you can insert it in your created table.\n",
+    "- Launch your Postgres instance! Right now only you have access to your data on your local machine. To share it, you need to use something like a **cloud-storage solution**.\n",
+    "    - [Launch Postgres on AWS](https://aws.amazon.com/getting-started/tutorials/create-connect-postgresql-db/)\n",
+    "    - [Launch Postgres with Heroku](https://www.heroku.com/postgres)"
+   ]
   }
  ],
  "metadata": {
